--- a/resources/course/static-dynamic-resources-rewrite-engines/index.html
+++ b/resources/course/static-dynamic-resources-rewrite-engines/index.html
@@ -14,6 +14,7 @@ wordpress_id: 51
 wordpress_url: http://rails.redconfetti.com/?page_id=51
 date: '2011-10-12 22:03:18 -0700'
 date_gmt: '2011-10-13 05:03:18 -0700'
+comments: true
 categories: []
 tags: []
 comments: []
