--- a/search/index.html
+++ b/search/index.html
@@ -9,7 +9,7 @@ title: Search
 
 <ul id="results-container"></ul>
 
-<script src="/js/jekyll-search.js" type="text/javascript"></script>
+<script src="/bower_components/simple-jekyll-search/dest/jekyll-search.js" type="text/javascript"></script>
 <script type="text/javascript">
 SimpleJekyllSearch({
   searchInput: document.getElementById('search-input'),
